k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meterai-blog
  namespace: mdi
spec:
  selector:
    app: meterai-blog
  ports:
  - port: 80
    targetPort: 80
