k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meterai-blog
  namespace: mdi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - blog.meterai.digital
    secretName: blog-meterai-tls
  rules:
  - host: blog.meterai.digital
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meterai-blog
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meterai-blog-admin
  namespace: mdi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: blog-credentials
    nginx.ingress.kubernetes.io/auth-realm: "Meterai Digital Admin"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - admin.blog.meterai.digital
    secretName: admin-blog-meterai-tls
  rules:
  - host: admin.blog.meterai.digital
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meterai-blog
            port:
              number: 80
